# python_dev_template

./: README.md
dummy_package/: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
dummy_package/dummy_package/: main.py
dummy_package/dummy_package/classes/: hello_world.py
